listings/ch04-understanding-ownership/no-listing-12-immutable-and-mutable-not-allowed/output.txt
$ cargo run
   Compiling ownership v0.1.0 (file:///projects/ownership)
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
             (`s`は不変で借用されているので、可変で借用できません)
 --> src/main.rs:6:14
  |
4 |     let r1 = &s; // 問題なし
  |              -- immutable borrow occurs here
  |                 (不変借用はここで発生しています)
5 |     let r2 = &s; // 問題なし
6 |     let r3 = &mut s; // 大問題！
  |              ^^^^^^ mutable borrow occurs here
  |                     (可変借用はここで発生しています)
7 |
8 |     println!("{}, {}, and {}", r1, r2, r3);
  |                                -- immutable borrow later used here
  |                                   (不変借用はその後ここで使われています)

For more information about this error, try `rustc --explain E0502`.
error: could not compile `ownership` (bin "ownership") due to 1 previous error
